--- a/src/components/UsersCard/UsersCards.scss
+++ b/src/components/UsersCard/UsersCards.scss
@@ -1,6 +1,7 @@
 @import '../../assets/scss/_variables';
 
 .cards {
+    margin-top: 50px;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
