--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -57,6 +57,13 @@
                 margin-bottom: 40px;
             }
 
+            h4 {
+                color: $button-color-primary;
+                font-weight: bold;
+                font-size: 12px;
+                text-transform: uppercase;
+            }
+
             .input {
                 margin-bottom: 20px;
             }
