--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -13,10 +13,22 @@
 
 html {
     scroll-behavior: smooth;
+    scrollbar-width: thin;
 }
   
 ::-webkit-scrollbar {
-    display: none;
+   width: 4px;
+   height: 4px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgb(33, 63, 125, 0.3);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px $color-secondary;
 }
 
 body {
@@ -57,6 +69,7 @@ h1 {
 }
 h2 {
     font-size: 24px;
+    font-weight: 500;
 }
 h4 {
     font-size: 16px;
@@ -65,42 +78,11 @@ p {
   font-size: 15px;
 }
 
-.color-gradient {
-    background: -webkit-linear-gradient($color-primary, $color-secondary);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-
 a {
   color: $button-color-primary;
   font-weight: bold;
   font-size: 12px;
   text-transform: uppercase;
-}
-
-.btn {
-    width: max-content;
-    display: inline-block;
-    padding: 0.75rem 1.2rem;
-    border-radius: 0.4rem;
-    font-size: 18px;
-    cursor: pointer;
-    border: 1px solid transparent;
-    background: linear-gradient(#fcfcfc, #fcfcfc) padding-box,
-      linear-gradient(to right,  $color-primary, $color-secondary) border-box;
-    transition: $transition;
-  
-    &:hover {
-      background: linear-gradient(to right,  $color-primary, $color-secondary);
-      color: #fff;
-      border: none;
-    }
-}
-  
-.btn-primary {
-    background: linear-gradient(to right, $color-primary, $color-secondary);
-    color: #fff;
-    border: none;
 }
   
 img {
@@ -120,4 +102,5 @@ img {
     .container {
       width: $container-width-sm;
     }
+   
   }
