--- a/src/components/Dropdown/DropdownTable.scss
+++ b/src/components/Dropdown/DropdownTable.scss
@@ -20,6 +20,13 @@
         font-size: 14px;
         cursor: pointer;
 
+        a {
+            font-weight: 500;
+            font-size: 14px;
+            color: $color-primary;
+            text-transform: none;
+        }
+
         &:hover {
             background: #39cdcd0c;
             border-left: 3px solid $button-color-primary;
