--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -5,7 +5,7 @@
     width: 100%;
     text-align: left;
     margin-top: 50px;
-    overflow: scroll;
+    overflow-x: scroll;
     box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
     border-radius: 4px;
     table {
